fixed image overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,6 +35,7 @@ body {
 
 header {
     @include flex-style();
+
     align-items: center;
     padding-block: 52px;
     .logo {
@@ -108,7 +109,7 @@ header {
     .content-picture {
         figure {
             img {
-                width: 100%;
+                max-width: 100%;
                 z-index: 100;
             }
         }
